Update Layout and fix spacing

--- a/css/about.css
+++ b/css/about.css
@@ -53,7 +53,7 @@ a {
 /* opening of vision */
 
 .about-section {
-    margin-top: 6em;
+    margin-top: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,6 +65,7 @@ a {
     font-weight: 600;
     justify-content: center !important;
     align-items: center !important;
+    margin-bottom: 0px;
 }
 
 .about-section-body {
@@ -142,7 +143,6 @@ a {
 }
 
 .sectionClass {
-    padding: 20px 0px 50px 0px;
     position: relative;
     display: block;
     width: 100%;
@@ -210,8 +210,8 @@ a {
     width: 60px;
     background: #121212;
     height: 2px;
-    display: block;
     margin: 0 auto;
+    display: none;
 }
 
 .projectFactsWrap .item i {
@@ -246,7 +246,7 @@ a {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 160px;
+    margin-top: 5em;
     gap: 4em;
 }
 
