--- a/css/form.css
+++ b/css/form.css
@@ -1,128 +1,135 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Poppins, sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Poppins, sans-serif;
 }
 
 li,
 a {
-  font-weight: 600px;
-  font-size: 16px;
-  color: #121212;
-  text-decoration: none;
+    font-weight: 600px;
+    font-size: 16px;
+    color: #121212;
+    text-decoration: none;
 }
 
 .form-section {
-  margin-top: 3em;
-  display: flex;
-  flex-direction: column;
-  max-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+    margin-top: 3em;
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .form-section-heading {
-  display: flex;
-  justify-content: center;
-  font-size: 3em;
-  font-weight: 600;
-  margin-bottom: 3em;
+    display: flex;
+    justify-content: center;
+    font-size: 3em;
+    font-weight: 600;
+    margin-bottom: 3em;
 }
 
+
 /* opening of form */
+
 
 /* opening of type selector */
 
 .input-container-heading {
-  font-size: 1.3em;
-  font-weight: 600;
-  letter-spacing: 3px;
-  margin-bottom: 2em;
+    font-size: 1.3em;
+    font-weight: 600;
+    letter-spacing: 3px;
+    margin-bottom: 2em;
 }
 
-.project-selector{
-  justify-content: center !important;
+.project-selector {
+    justify-content: center !important;
 }
 
 .project-selector-options {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2em;
-  max-width: max-content;
-  margin: 0.5em 0.2em;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: max-content;
+    margin: 0.5em 0.2em;
+    justify-content: center;
+    align-items: center;
 }
 
 .selector-button {
-  display: flex;
-  padding: 0.7em 2em;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  border: 1px solid #e2e2e2;
-  border-radius: 40px;
-  font-size: 1.1em;
-  font-weight: 500;
-  transition: all 0.3s ease 0s;
-  background-color: #ffffff;
+    display: flex;
+    padding: 0.7em 2em;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border: 1px solid #e2e2e2;
+    border-radius: 40px;
+    font-size: 1.1em;
+    font-weight: 500;
+    transition: all 0.3s ease 0s;
+    background-color: #ffffff;
 }
 
 .selector-button:focus {
-  background-color: #e2e2e2;
+    background-color: #e2e2e2;
 }
 
+
 /* closing of type selector */
+
+
 /* opening of inputs */
+
 .inputs-container {
-  display: flex;
-  flex-direction: column;
-  max-width: 80%;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    justify-content: center;
 }
 
 .input-field {
-  border: none;
-  border-bottom: 2px solid #e2e2e2;
-  padding-bottom: 1em;
-  font-size: 1em;
-  outline: none;
+    border: none;
+    border-bottom: 2px solid #e2e2e2;
+    padding-bottom: 1em;
+    font-size: 1em;
+    outline: none;
 }
 
 .inputs-section {
-  row-gap: 64px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center !important;
-  margin-top: 3em;
-  max-width: 80%;
+    row-gap: 64px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center !important;
+    margin-top: 3em;
+    max-width: 80%;
 }
 
 .form-button {
-  display: flex;
-  border: none;
-  padding: 0.8em 1.5em;
-  border-radius: 20px;
-  border: 1px solid #e2e2e2;
-  color: #ffffff;
-  cursor: pointer;
-  font-size: 1.1em;
-  font-weight: 500;
-  margin: 2em auto 4em auto;
-  background-image: linear-gradient(to top, #0868d8 50%, #1d85ff 50%);
-  background-size: 100% 200%;
-  background-position: 0% 0%;
-  transition: all 0.3s ease 0s;
-  width: fit-content;
+    display: flex;
+    border: none;
+    padding: 0.8em 1.5em;
+    border-radius: 20px;
+    border: 1px solid #e2e2e2;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 1.1em;
+    font-weight: 500;
+    margin: 2em auto 4em auto;
+    background-image: linear-gradient(to top, #0868d8 50%, #1d85ff 50%);
+    background-size: 100% 200%;
+    background-position: 0% 0%;
+    transition: all 0.3s ease 0s;
+    width: fit-content;
 }
 
 .form-button:hover {
-  color: #ffffff;
-  background-position: 0% 100%;
+    color: #ffffff;
+    background-position: 0% 100%;
 }
 
+
 /* closing of inputs */
+
+
 /* closing of form */
